--- a/app/src/main/res/layout/todo_footer_layout.xml
+++ b/app/src/main/res/layout/todo_footer_layout.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/footer_background">
 
     <TextView
         android:id="@+id/textView2"
@@ -22,17 +23,16 @@
 
     <Button
         android:id="@+id/deleteCompletedItemBtn"
-        android:onClick="deleteCompletedItemClicked"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@android:color/transparent"
-        android:text="@string/clear_completed"
+        android:background="@mipmap/ic_delete_all_btn"
+        android:onClick="deleteCompletedItemClicked"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,17 +42,16 @@
 
     <Button
         android:id="@+id/showAllItemBtn"
-        android:onClick="showAllItemClicked"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
-        android:background="@android:color/transparent"
-        android:text="@string/all_active"
+        android:background="@mipmap/ic_show_entire_list_btn"
+        android:onClick="showAllItemClicked"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/showCompletedItemBtn"
@@ -62,21 +61,59 @@
 
     <Button
         android:id="@+id/showCompletedItemBtn"
-        android:onClick="showCompletedItemClicked"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
-        android:background="@android:color/transparent"
-        android:text="@string/completed"
+        android:background="@mipmap/ic_show_completed_task_list_btn"
+        android:onClick="showCompletedItemClicked"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deleteCompletedItemBtn"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/showAllItemBtn"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:text="全項目表示"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/showAllItemBtn"
+        app:layout_constraintStart_toStartOf="@+id/showAllItemBtn"
+        app:layout_constraintTop_toBottomOf="@+id/showAllItemBtn" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="28dp"
+        android:layout_marginBottom="2dp"
+        android:text="完了項目表示"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/showCompletedItemBtn"
+        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintStart_toStartOf="@+id/showCompletedItemBtn"
+        app:layout_constraintTop_toBottomOf="@+id/showCompletedItemBtn" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:text="リストの項目削除"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/deleteCompletedItemBtn"
+        app:layout_constraintStart_toStartOf="@+id/deleteCompletedItemBtn"
+        app:layout_constraintTop_toBottomOf="@+id/deleteCompletedItemBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
