--- a/app/src/main/res/layout/todo_list_item_layout.xml
+++ b/app/src/main/res/layout/todo_list_item_layout.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:background="@drawable/list_border_style"
+    android:layout_height="80dp">
 
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="5dp"
-        android:gravity="center"
+        android:button="@drawable/custom_checkbox"
+        android:layout_marginLeft="10dp"
+        android:gravity="center_vertical|center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/item_contents"
         app:layout_constraintStart_toStartOf="parent"
