--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorYellow">#fdfd96</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorLightBlue">#89cff0</color>
+    <color name="colorLightGray">#DCDCDC</color>
 </resources>
