[update] 既存のRecyclerViewの処理を修正

--- a/app/src/main/res/layout/todo_footer_layout.xml
+++ b/app/src/main/res/layout/todo_footer_layout.xml
@@ -110,7 +110,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
-        android:text="リストの項目削除"
+        android:text="完了項目削除"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/deleteCompletedItemBtn"
