--- a/app/src/main/res/layout/todo_list_item_layout.xml
+++ b/app/src/main/res/layout/todo_list_item_layout.xml
@@ -10,6 +10,7 @@
         android:id="@+id/checkBox"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:checked="false"
         android:button="@drawable/custom_checkbox"
         android:layout_marginLeft="10dp"
         android:gravity="center_vertical|center_horizontal"
@@ -45,5 +46,17 @@
         app:layout_constraintStart_toEndOf="@+id/item_contents"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Date" />
+
+    <TextView
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="status" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
