[add/update] Splash画面とデータベースの設定部分の作成

--- a/app/src/main/res/layout/todo_footer_layout.xml
+++ b/app/src/main/res/layout/todo_footer_layout.xml
@@ -11,9 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
+        android:fontFamily="sans-serif-black"
         android:text="0 item left"
-        android:textSize="12sp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/showAllItemBtn"
         app:layout_constraintHorizontal_bias="0.5"
@@ -83,6 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
+        android:fontFamily="sans-serif-black"
         android:text="全項目表示"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -95,8 +96,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
         android:layout_marginBottom="2dp"
+        android:fontFamily="sans-serif-black"
         android:text="完了項目表示"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -110,6 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
+        android:fontFamily="sans-serif-black"
         android:text="完了項目削除"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
